# FreeCAD_assembly3

./: .gitmodules  FCADLogger.py  FUNDING.yml  InitGui.py  MANIFEST.in  Readme.md  __init__.py  assembly.py  constraint.py  gui.py  init_gui.py  mover.py  package.xml  proxy.py  setup.py  solver.py  sys_slvs.py  sys_sympy.py  system.py  utils.py
extra/: mkimg.sh
freecad/: __init__.py
freecad/asm3/: assembly.py  constraint.py  gui.py  init_gui.py  install_prompt.py  mover.py  proxy.py  solver.py  sys_slvs.py  sys_sympy.py  system.py  utils.py
freecad/asm3/translations/: asm3.ts  asm3_de.qm  asm3_de.ts  asm3_es-AR.qm  asm3_es-AR.ts  asm3_es-ES.qm  asm3_es-ES.ts  asm3_pl.qm  asm3_pl.ts  asm3_uk.qm  asm3_uk.ts  update_translation.sh
